// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactNativeTemplate should import used components 1`] = `
"import React from 'react'
import Svg, { Group } from 'react-native-svg';
const Test = () => <Svg />

export default Test"
`;

exports[`reactNativeTemplate should log unsupported components 1`] = `
"import React from 'react'
import Svg from 'react-native-svg';

// SVGR has dropped some elements not supported by react-native-svg: Group
const Test = () => <Svg />

export default Test"
`;

exports[`reactNativeTemplate should wrap code into a component 1`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = () => <Svg />

export default Test"
`;

exports[`reactNativeTemplate should wrap code into a component 2`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = ({ title }) => <Svg />

export default Test"
`;

exports[`reactNativeTemplate should wrap code into a component 3`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = ({ svgRef }) => <Svg />

const ForwardRef = React.forwardRef((props, ref) => <Test svgRef={ref} {...props} />)

export default ForwardRef"
`;

exports[`reactNativeTemplate should wrap code into a component 4`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = props => <Svg />

export default Test"
`;

exports[`reactNativeTemplate should wrap code into a component 5`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = ({ svgRef, title }) => <Svg />

const ForwardRef = React.forwardRef((props, ref) => <Test svgRef={ref} {...props} />)

export default ForwardRef"
`;

exports[`reactNativeTemplate should wrap code into a component 6`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = ({ title, ...props }) => <Svg />

export default Test"
`;

exports[`reactNativeTemplate should wrap code into a component 7`] = `
"import React from 'react'
import Svg from 'react-native-svg';
const Test = ({ svgRef, ...props }) => <Svg />

const ForwardRef = React.forwardRef((props, ref) => <Test svgRef={ref} {...props} />)

export default ForwardRef"
`;
